# hot-patch-lab

./: .gitignore  CMakeLists.txt  README.md
include/: breakpoint_hook.hpp  disassembler.hpp  elf_header.hpp  elf_reader.hpp  elf_runner.hpp  ptrace_utils.hpp
src/: breakpoint_hook.cpp  disassembler.cpp  elf_reader.cpp  elf_runner.cpp  main.cpp
templates/: code.html  function_selector.html  index.html
test/: a.out  main.c
